style.css
/* ... */
a#scroll-up i {
	color: #ffffff;
}

a#scroll-up:hover {
	opacity: 1;
	filter: alpha(opacity=100); /* For IE8 and earlier */
}

/* =Google Rich Snippets
----------------------------------------------- */
.extra-hatom-entry-title {
	display: none;
}

/* WooCommerce CSS
----------------------------------------------- */

.woocommerce ul.products li.product a img:hover,
.woocommerce div.product div.images img:hover {
	opacity: 1;
}

.woocommerce ul.products li.product .price del {
	display: inline-block;
	margin-right: 10px;
}

.woocommerce ul.products li.product .price .amount,
.entry-summary .price .amount,
.woocommerce .woocommerce-message::before {
	color: #ed564b;
}

.woocommerce ul.products li.product .price ins {
	text-decoration: none;
}

.woocommerce #respond input#submit,
.woocommerce a.button,
.woocommerce button.button,
.woocommerce input.button,
.woocommerce #respond input#submit.alt,
.woocommerce a.button.alt,
.woocommerce button.button.alt,
.woocommerce input.button.alt {
	background-color: #ed564b;
	color: #ffffff;
}

.woocommerce #respond input#submit:hover,
.woocommerce a.button:hover,
.woocommerce button.button:hover,
.woocommerce input.button:hover,
.woocommerce #respond input#submit.alt:hover,
.woocommerce a.button.alt:hover,
.woocommerce button.button.alt:hover,
.woocommerce input.button.alt:hover {
	background-color: #d63f34;
	color: #ffffff;
}

.woocommerce .star-rating span,
.woocommerce p.stars a::before {
	color: #ffd700;
}

.woocommerce ul.products li.product .price del {
	display: inline-block;
	margin-right: 10px;
}

.woocommerce span.onsale {
	background-color: #ed564b;
	color: #ffffff;
}

.woocommerce .woocommerce-message {
	border-top-color: #ed564b;
}

/* =Header media CSS
----------------------------------------------- */

.wp-custom-header {
	position: relative;
}

iframe#wp-custom-header-video {
	width: 100%;
}

.wp-custom-header-video-button {
	opacity: 0;
	visibility: hidden;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	margin: auto;
	width: 62px;
	height: 50px;
	font: 0px/0 a;
	-moz-transition: all 0.5s;
	-o-transition: all 0.5s;
	-webkit-transition: all 0.5s;
	transition: all 0.5s;
}

div#wp-custom-header:hover .wp-custom-header-video-button {
	visibility: visible;
	opacity: 1;
}

.wp-custom-header-video-button:before {
	content: '\f04b';
	display: block;
	font-family: FontAwesome;
	font-size: 20px;
}

.wp-custom-header-video-button.wp-custom-header-video-pause:before {
	content: '\f04c';
}

